--- a/pom.xml
+++ b/pom.xml
@@ -62,13 +62,7 @@
 
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.36</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
+            <artifactId>slf4j-nop</artifactId>
             <version>1.7.36</version>
         </dependency>
 
